@@ -1,0 +1,280 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u6797\u82f1\u96c4\u3001SM\u5a1b\u6a02\u9818\u8ecd", "description": "K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u6797\u82f1\u96c4\u3001SM\u5a1b\u6a02\u9818\u8ecd", "url": "https://www.famechos.me/news/K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u6797\u82f1\u96c4\u3001SM\u5a1b\u6a02\u9818\u8ecd.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T02:46:38.179775+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html"/>
+<meta name="description" content="韓國音樂界迎來新革命！Trot與K-pop融合掀起新浪潮，林英雄、SM娛樂領軍，帶領韓國音樂走向新時代。">
+
+<meta name="keywords" content="K-pop新革命、Trot、K-pop融合、韓國音樂新浪潮、林英雄、SM娛樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html" />
+        <meta property="og:title" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍" />
+        <meta property="og:description" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍" />
+        <meta property="twitter:description" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>韓國流行音樂（K-pop）在全球市場的持續擴張之際，另一種音樂類型正在國內音樂界迅速崛起：Trot。一些Trot歌手取得了顯著的成功後，主要的K-pop唱片公司開始嘗試將Trot和K-pop結合起來。</p>
+<p>Trot是自1930年代以來一直是韓國流行音樂的一部分，其特點是充滿活力的節奏和大量使用顫音，歌詞往往迎合老一輩人的情感。然而，近年來，Trot歌手參加的選秀節目取得了成功，引發了年輕Trot藝人的崛起，他們的受歡迎程度與K-pop明星不相上下，吸引了更廣泛的觀眾。</p>
+<p>林英雄是當今最受歡迎的Trot歌手之一，他在2020年參加朝鮮電視台的《明天是Mr.Trot》後一舉成名。他成為第一位在國內音樂串流網站Melon上累積播放量超過100億的獨唱藝人，也是第一位在2022年甜瓜音樂獎上獲得兩項大獎的Trot歌手。最近，林英雄在首爾世界盃體育場舉行了個人演唱會，兩天的演出吸引了約10萬名觀眾。</p>
+<p>一些K-pop唱片公司似乎對這種Trot復興感興趣，並開始模糊Trot和K-pop之間的界限。來自美國的19歲K-pop粉絲Emily表示：“有一個即將出道的K-pop男團將是一個Trot樂隊，我真的很興奮。我知道Trot主要與老一輩人相關，但我聽過一些Trot歌曲，它們真的很好！”</p>
+<ol>
+<li>SM娛樂計劃在今年晚些時候與朝鮮電視台合作推出一個Trot偶像團體Mytro。</li>
+<li>該團體由五名成員組成，包括曾參加《明天是Mr.Trot》的林采炫、前MR.MR成員Tey、演員徐宇赫和鄭允在，以及曾在SM娛樂接受K-pop訓練的日本籍成員Shohei。</li>
+<li>朝鮮電視台將播出一檔新的綜藝節目《Falling for a Trot-dol：Lovestruckonas》，記錄Mytro成員出道前的旅程。</li>
+<li>該節目也將在韓國和日本播出，這表明Mytro將在海外發展。</li>
+</ol>
+業內人士表示：“Trot和K-pop都有堅實的粉絲群，我們希望這兩種類型的結合會產生協同效應。SM娛樂一直在嘗試跨類型的音樂，從古典音樂到EDM和R&B，所以這可以被視為是這種嘗試的延續。”<h2>K-pop與Trot融合：新趨勢下的音樂探索</h2>
+<p>近日，K-pop唱片公司JYP娛樂宣布將通過其子公司INNIT娛樂選拔新的Trot人才。這一消息引起了K-pop粉絲的廣泛討論。</p>
+<p>一位20多歲的韓國K-pop粉絲Kim表示，她對Trot和K-pop的融合既期待又擔心。她的顧慮在於，主要消費Trot的聽眾與K-pop唱片公司傳統上針對的受眾有很不同的偏好，不知道這個團體是否能夠滿足特定的消費群體。</p>
+<p>然而，Kim也認為，Trot和K-pop都是以強大的粉絲參與度而聞名的類型，這可能有利於這種融合。她說：“Trot和K-pop都是粉絲參與度很高的類型，所以這可能會奏效。”</p>
+<p>此外，Kim還指出，Trot可能會吸引全球觀眾，因為它是一種他們可能從未聽過的類型。她說：“雖然Trot對年輕韓國人來說可能顯得過時，但它可能會被國際觀眾視為新鮮和陌生的東西。”</p>
+<p>另一位K-pop粉絲Emily表示，K-pop內部人士應該嘗試在歌曲中加入更多的韓國元素。她說：“K-pop有自己的特殊聲音，使它與其他流行音樂類型不同，我希望公司能夠專注於保持這種聲音，而不是試圖迎合西方觀眾。”</p>
+<p>Emily還建議，K-pop公司應該嘗試從韓國的各種音樂類型中擴展，而不是只關注全球市場上流行的東西。</p>
+<ul>
+<li>Trot和K-pop融合可能會吸引新的聽眾</li>
+<li>K-pop公司應該專注於保持自己的特殊聲音</li>
+<li>嘗試從韓國的各種音樂類型中擴展</li>
+</ul>
+<h2>流行音樂遇上演歌：韓國音樂的新未來</h2>
+<p>評論家林熙允認為，韓國流行音樂與演歌融合是業界為了突破現有的韓國流行音樂IP限制而正在探索的多個選擇之一。</p>
+<p>林熙允表示，新的嘗試往往會引發是否仍可被視為韓國流行音樂的疑問，例如多國籍韓國流行音樂團體或本地化團體如Dear Alice和KATSEYE。他還指出，主要娛樂公司似乎相信，以傳統韓國流行音樂公式創建的內容和IP已經達到了增長的極限。</p>
+<p>林熙允補充說，考慮到日本是主要海外韓國流行音樂市場之一，而日本有一種叫做演歌的類型，與演歌共享相似的情感基調，演歌偶像似乎是一個值得嘗試的冒險。他還表示，演歌迄今為止在國內取得的成功也是令人鼓舞的。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rjS1-aD6e-4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html">BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html">睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html">K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
