@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:43:56 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:46:50 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -61,5 +61,11 @@
   <description>Yena的新單曲NemoNemo呈現出巧妙的愛情隱喻Yena帶著她的第三張單曲專輯NemoNemo回歸距離她在一月份發行GoodMorning已經八個月了這張專輯的名稱源自韓語中的正方形一詞用來隱喻愛情的複雜情感Yena表示每個人都有不同的愛情定義或表達...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 02:43:56 +0800</pubDate>
+</item><item>
+  <title>K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍</title>
+  <link>https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html</link>
+  <description>韓國流行音樂的新趨勢Trot與Kpop的融合韓國流行音樂Kpop在全球市場的持續擴張之際另一種音樂類型正在國內音樂界迅速崛起Trot一些Trot歌手取得了顯著的成功後主要的Kpop唱片公司開始嘗試將Trot和Kpop結合起來Trot是自1930年代以來一直是韓國流行音樂的一部分其特點是充滿活力的節奏和大量使用顫音歌...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 02:46:50 +0800</pubDate>
 </item></channel>
 </rss>
