@@ -62,4 +62,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T02:46:50+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
