@@ -7,3 +7,4 @@ https://www.koreaherald.com/view.php?ud=20241007050599
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/
 https://www.koreaherald.com/view.php?ud=20241004050494
 https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-see-geisha-in-tokyo/
+https://www.koreaherald.com/view.php?ud=20241001050096
